--- a/website_snippet_all/views/assets.xml
+++ b/website_snippet_all/views/assets.xml
@@ -15,7 +15,8 @@
 
     <template id="assets_frontend" inherit_id="website.assets_frontend" priority="1">
         <xpath expr="//link[last()]" position="after">
-            <link rel="stylesheet" type="text/scss" href="/website_snippet_all/static/src/scss/website_snippet_all.scss"/>
+            <link rel="stylesheet" type="text/scss"
+                  href="/website_snippet_all/static/src/scss/website_snippet_all.scss"/>
             <link rel="stylesheet" type="text/scss" href="/website_snippet_all/static/src/scss/s_color_blocks_2.scss"/>
             <link rel="stylesheet" type="text/scss" href="/website_snippet_all/static/src/scss/s_color_blocks_4.scss"/>
             <link rel="stylesheet" type="text/scss" href="/website_snippet_all/static/src/scss/s_two_columns.scss"/>
@@ -29,11 +30,11 @@
             <link rel="stylesheet" type="text/scss" href="/website_snippet_all/static/src/scss/s_big_image_parallax.scss"/>
             <link rel="stylesheet" type="text/scss" href="/website_snippet_all/static/src/scss/s_text_highlight.scss"/>
         </xpath>
+    </template>
+
+    <template id="assets_editor" inherit_id="website.assets_editor">
         <xpath expr="//script[last()]" position="after">
-            <script
-                    type="text/javascript"
-                    src="/website_snippet_all/static/src/js/website.website_snippet_all.animation.js"
-            />
+            <script type="text/javascript" src="/website_snippet_all/static/src/js/s_progress_bar.js"></script>
         </xpath>
     </template>
 </odoo>
