--- a/website_snippet_all/views/snippets.xml
+++ b/website_snippet_all/views/snippets.xml
@@ -11,6 +11,7 @@
             <t t-snippet="website_snippet_all.s_three_columns_circle" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_three_columns_circle.png"/>
             <t t-snippet="website_snippet_all.s_animated_boxes" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_animated_blocks.jpg"/>
             <t t-snippet="website_snippet_all.s_showcase" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_showcase.jpg"/>
+            <t t-snippet="website_snippet_all.s_numbers" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_numbers.png"/>
         </xpath>
         <xpath expr="//div[@id='snippet_content']/div[hasclass('o_panel_body')]/t" position="before">
             <t t-snippet="website_snippet_all.s_icon_box" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_icon_box.png"/>
