--- a/website_snippet_all/views/snippets.xml
+++ b/website_snippet_all/views/snippets.xml
@@ -19,6 +19,7 @@
             <t t-snippet="website_snippet_all.s_header_text_big_picture" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_header_text_bigpicture.png"/>
             <t t-snippet="website_snippet_all.s_product_list" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_product_list.png"/>
             <t t-snippet="website_snippet_all.s_features_carousel" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_features.png"/>
+            <t t-snippet="website_snippet_all.s_big_icons" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_big_icon_circle.png"/>
         </xpath>
         <xpath expr="//div[@id='snippet_content']/div[hasclass('o_panel_body')]/t" position="before">
             <t t-snippet="website_snippet_all.s_icon_box" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_icon_box.png"/>
